# ArchGuard

./: .gitignore  ArchGuard_Presentation_Detailed.pptx  ArchGuard_Progress.pptx  CLAUDE.md  README.md  appendix_output.txt  demo_output.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
src/archguard/: __init__.py  core.py
src/archguard/common/: __init__.py  constants.py  exceptions.py  graph_utils.py  logger.py
src/archguard/phase1_symbolic_brain/: __init__.py  graph_builder.py  models.py  plantuml_parser.py
src/archguard/phase2_code_abstraction/: __init__.py  ast_walker.py  code_graph_builder.py  models.py  tree_sitter_wrapper.py
src/archguard/phase2_code_abstraction/extractors/: __init__.py  python_extractor.py
src/archguard/phase3_logic_engine/: __init__.py  constraint_checker.py  models.py  trace_generator.py  violation_detector.py
src/archguard/phase4_neuro_symbolic/: __init__.py  explanation_formatter.py  gemini_client.py  models.py  prompt_generator.py
tests/: __init__.py  conftest.py  test_placeholder.py
tests/fixtures/sample_architectures/: ecommerce_arch.puml  simple_layered.puml
tests/fixtures/sample_code/: complex_service.py  ecommerce_service.py  simple_service.py
tests/integration/: test_phase1_end_to_end.py  test_phase2_end_to_end.py  test_phase3_end_to_end.py
tests/unit/test_phase1_symbolic_brain/: test_graph_builder.py  test_models.py  test_plantuml_parser.py
tests/unit/test_phase2_code_abstraction/: __init__.py  test_ast_walker.py  test_code_graph_builder.py  test_models.py  test_python_extractor.py  test_tree_sitter_wrapper.py
tests/unit/test_phase3_logic_engine/: test_constraint_checker.py  test_models.py  test_trace_generator.py  test_violation_detector.py
